# MCP-Developer-SubAgent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  scope.md  setup.py
.claude/: activation_engine.py  activation_rules.json  config.json  hooks.json  rate_limits.json
.claude/agents/: context-manager.md  fastmcp-specialist.md  mcp-debugger.md  mcp-enterprise-developer.md  mcp-orchestrator.md
.claude/agents/core/: enterprise-integration.md  fastmcp-specialist.md  mcp-protocol-expert.md
.claude/agents/specialists/: fastmcp-specialist.md  mcp-debugger.md  mcp-protocol-expert.md  mcp-security-auditor.md
.claude/hooks/: pre_tool_validator.py
.claude/sdk/: __init__.py  auto_activation.py  base_agent.py  communication.py  context_manager.py  markdown_agent.py  quality_gates.py  registry.py
.github/workflows/: claude-code-mcp.yml
claude_code_sdk/: __init__.py  claude_integration.py  cli.py  cli_simple.py  rate_limiter.py
claude_code_sdk/test/: __init__.py  test_agents.py  test_claude_integration.py  test_cli.py  test_rate_limiter.py  test_security.py  test_utils.py
docs/: best-practices.md  getting-started.md  troubleshooting.md
examples/: basic-server.py  database-tools.py  debugging-guide.md
examples/enterprise-auth-server/: README.md  requirements.txt  server.py
examples/minimal-mcp-server/: README.md  requirements.txt  server.py
examples/testing-framework/: README.md  requirements.txt  test_mcp_compliance.py
subagents/: mcp-deployment-specialist.md  mcp-developer.md  mcp-performance-optimizer.md  mcp-protocol-expert.md  mcp-security-auditor.md
tests/: __init__.py  test_integration.py  test_performance.py
