[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-mcp-sdk"
version = "1.0.0"
description = "Claude Code SDK for MCP Development - Standards Compliant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MCP Development Team", email = "dev@mcp.dev"}
]
keywords = [
    "mcp", "model-context-protocol", "claude", "fastmcp", 
    "agents", "orchestration", "ai", "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.dependencies]
fastmcp = ">=0.1.0"
pydantic = ">=2.0.0"
anthropic = ">=0.25.0"
aiofiles = ">=0.8.0"
click = ">=8.0.0"
structlog = ">=22.0.0"
python-dotenv = ">=1.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0"
]
auth = [
    "pyjwt>=2.0.0",
    "cryptography>=3.4.0"
]

[project.scripts]
claude-mcp = "claude_code_sdk.cli:cli"
mcp-orchestrate = "claude_code_sdk.cli:orchestrate"

[project.urls]
Homepage = "https://github.com/gensecaihq/MCP-Developer-SubAgent"
Documentation = "https://docs.claude-mcp-sdk.dev"
Repository = "https://github.com/gensecaihq/MCP-Developer-SubAgent"
Issues = "https://github.com/gensecaihq/MCP-Developer-SubAgent/issues"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "claude/tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"